fix(RHINENG-13796): Fix vertical alignment Inv tags badge

--- a/packages/components/src/FilterHooks/tagFilterHook.scss
+++ b/packages/components/src/FilterHooks/tagFilterHook.scss
@@ -9,7 +9,9 @@
     }
     .pf-v5-c-badge {
       margin-left: auto;
-      padding-top: 0.2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   .pf-v5-c-select__menu-group-title:empty { display: none; }
